tests/invalid/simple/TupleDefine_CompileFail_1.whiley
define point as {real x,real y}

void System::main([string] args):
     point p
     int x
     p = {x:1.0,y:2.23}
     x = p.x
     print str(x)

